[package]
name = "practice-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "0.9.0"
qrcode = "0.12.0"
image = "0.23.0"
clap = { version = "4.0.18", features = ["derive"] }
anyhow = "1"
url = "2.3.1"
deno_core = "0.156.0"
tokio = {version = "1.21.2",features=["full"]}

[[example]]
name = "deno"