[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
anyhow ="1.0.59"
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
jsonxf = "1.1.1"
mime = "0.3.16"
tokio = "1.20.1"

