[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
anyhow = "1.0.59"
tokio = {version = "1.20.1",features=["full"]}
tokio-util = {version = "0.7.3",features = ["codec"]}
futures = "0.3.21"
bytes = "1.2.1"
prost = "0.11.0"
dashmap = "5.3.4"
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.15",features = ["env-filter"]}

[build-dependencies]
prost-build = "0.11.0"