[package]
name = "pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = {version = "1.21.2",features = ["sync","macros","rt-multi-thread"]}
prost = "0.11.0"
tonic = "0.8.2"
futures = "0.3.25"
tokio-stream = "0.1.11"
anyhow ="1.0.66"
blake3 = "1.3.1"
hex = "0.4.3"
rayon ="1.5.3"

[build-dependencies]
tonic-build = "0.8.2"